--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/public/camper.png" />
+  <link rel="icon" type="image/png" href="/camper.png" />
   <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
